# datumguard

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  design-qa.md  docker-compose.yml  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json  start-demo.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-self-test.yml  ci.yml  deployment-smoke.yml  frame-research.yml  security.yml
docs/: HANDOFF.md  PRD.md  TRD.md  analytics-and-attribution.md  artifact-lab.md  demo.md  deployment.md  design-system.md  engineering-domains.md  frameguard-gnn.md  frameguard-opensees.md  frameguard-rhino.md  frameguard-surrogate.md  frameguard.md  github-deployment.md  github-first.md  growth-and-launch-roadmap.md  piping-demo.md  product-design-audit-2026-07-13.md  prompt-design.md  solid-step.md  user-scenarios.md
docs/awards-2026/: BIM_AWARDS_2026_STUDENT_RESEARCH_DESCRIPTION.docx  COMPETITION_DESCRIPTION.md  DATASET_CARD.md  DEVELOPMENT_PLAN.md  LIMITATIONS.md  PRD_STUDENT_EDITION.md  README.md  RESEARCH_PLAN.md  RESULTS.md  RULE_CATALOG.md  STUDENT_DESIGN_FEASIBILITY.md  SUBMISSION_GUIDE.md  THIRD_PARTY_AND_AI_USE.md  protocol.yaml
prompts/: INDEX.md  MASTER.md
tests/: conftest.py  test_action_paths.py  test_api.py  test_architecture.py  test_architecture_mvp.py  test_artifact_lab.py  test_cli.py  test_frame.py  test_frame_api.py  test_frame_assurance_api.py  test_frame_cad_service.py  test_frame_dataset.py  test_frame_dxf.py  test_frame_gnn.py  test_frame_mcp.py  test_frame_opensees.py  test_frame_rhino_adapter.py  test_frame_rhino_roundtrip.py  test_frame_surrogate.py  test_mcp.py  test_openbim_api.py  test_openbim_backend.py  test_openbim_dataset.py  test_pipeline.py  test_piping.py
tools/: build_bim_awards_description_docx.py  capture_frameguard_cordyceps_evidence.py  export_openbim_representative.py  generate_virtual_fab_fixtures.py  load_probe.py  rhino_headless_import.py  rhino_step_smoke.py  run_frame_opensees_parity.py  run_frame_surrogate_experiment.py  run_openbim_experiment.py  train_frame_gnn.py
web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+406 files in other folders)
